crud for authors and semi crud for loans
