# src/server.ts
@@ -2,6 +2,8 @@ import express, { Request, Response } from "express";
 import { sequelize } from "./db/connection.js";
 import docsRouter from "./docs.js";
 import booksRoutes from "./routes/books.routes.js";
+import authorsRoutes from "./routes/authors.routes.js";
+import loansRoutes from "./routes/loan.routes.js"
 
 const app = express();
 const PORT = 3000;
@@ -17,9 +19,9 @@ app.get("/", (req: Request, res: Response) => {
 app.use("/docs", docsRouter);
 
 // 👇 Acá vas a montar tus routers:
-// app.use("/authors", authorsRoutes);
+app.use("/authors", authorsRoutes);
 app.use("/books", booksRoutes);
-// app.use("/loans", loansRoutes);
+app.use("/loans", loansRoutes);
 
 // Ya hecho. Si un pedido falla con un error que nadie atrapó (por ejemplo, un error
 // de la base), lo mostramos en la terminal en vez de apagar el servidor.
