# src/types/author.ts
@@ -3,3 +3,8 @@ export interface Author {
     name: string;
     nationality: string;
 }
+
+export interface NewAuthor {
+    name: string;
+    nationality: string;
+}
